--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
 .App {
-  text-align: center;
+  display: grid;
+  grid-template-areas: "h h" "n c";
+  grid-template-rows: 100px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-gap: 10px;
+  max-width: 1380px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  background-color: green;
+  grid-area: h;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header__logo {
+  max-width: 80px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header__logo-pic {
+  width: 100%;
+  height: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  grid-area: n;
+  background-color: green;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  grid-area: c;
+}
+
+.content__img {
+  height: 230px;
+}
+
+.content__img-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
