--- a/src/App.css
+++ b/src/App.css
@@ -2,50 +2,22 @@ ul {
   margin: 0;
   padding: 0;
 }
-
 li {
   list-style: none;
 }
-
+img {
+  width: 100%;
+  height: auto;
+}
 .App {
   display: grid;
   grid-template-areas: "h h" "n c";
-  grid-template-rows: 100px 1fr;
+  
   grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
   max-width: 1380px;
   margin: 0 auto;
 }
-
-.header {
-  background-color: green;
-  grid-area: h;
-}
-
-.header__logo {
-  max-width: 80px;
-}
-
-.header__logo-pic {
-  width: 100%;
-  height: auto;
-}
-
-.navbar {
-  grid-area: n;
-  background-color: green;
-}
-
-.content {
-  grid-area: c;
-}
-
-.content__img {
-  height: 230px;
-}
-
-.content__img-pic {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.item2 {
+  color: aqua;
 }
