--- a/src/components/Content.module.css
+++ b/src/components/Content.module.css
@@ -1,6 +1,3 @@
-.content {
-  grid-area: c;
-}
 
 .img {
   height: 230px;
@@ -17,6 +14,16 @@
   height: 150px;
 }
 .about {
+  grid-template-columns: 1fr 2fr 1fr;
+  display: grid;
+  grid-gap: 15px;
+}
+.desc {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.title {
+  font-style: italic;
+  line-height: 24px;
 }
