--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,5 +1,14 @@
 .navbar {
-  grid-area: n;
   background-color: green;
+  padding: 20px;
 }
+.item {
+margin-bottom: 30px;
+cursor: pointer;
+}
+.item:hover, .item:active, .item:focus {
+  opacity: .2;
+}
+
+
 
