--- a/src/components/Dialogs/DialogsItems/DialogItem/DialogsItem.module.css
+++ b/src/components/Dialogs/DialogsItems/DialogItem/DialogsItem.module.css
@@ -3,7 +3,7 @@
 }
 
 .dialogs__item {
-    display: block;
+    display: flex;
     position: relative;
     padding-left: 20px;
     margin-bottom: 30px;
@@ -21,6 +21,15 @@
     height: 10px;
     background-color: pink;
     border-radius: 50%;
+}
+.user__avatar{
+    width: 50px;
+    height: 50px;
+    margin-right: 30px;
+}
+.user__avatar img {
+    border-radius: 50%;
+    height: 100%;
 }
 
 
